--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="navik-header-container">
 					
 					<!-- LOGO IMAGE -->
-	                <div class="logo" data-sticky-logo="images/logo-01.png">
+	                <div class="logo" data-sticky-logo="images/granero/logos/Logo granero png (1).png">
 	                	<a href="#hero-4"><img src="./images/granero/logos/Logo granero png (1).png" alt="header-logo"/></a>
 					</div>
 
