--- a/index.html
+++ b/index.html
@@ -2205,6 +2205,313 @@
 
 
 
+			
+			<section id="menu-6" class="wide-70 menu-section division">
+				<div class="container">
+
+
+					<!-- SECTION TITLE -->	
+					<div class="row">	
+						<div class="col-lg-10 offset-lg-1">
+							<div class="section-title mb-60 text-center">	
+
+								<!-- Title 	-->	
+								<h2 class="h2-xl red-color">Ensaladas</h2>	
+
+								<!-- Text -->	
+								<p class="p-xl">Nuestros clientes recomiendan empezar probando...
+								</p>
+									
+							</div>	
+						</div>
+					</div>
+
+
+					<div class="row">
+
+
+						<!-- MENU ITEM #1 -->
+						<div class="col-sm-6 col-lg-3">
+							<div class="menu-6-item bg-white">
+
+								<!-- IMAGE -->
+								<div class="menu-6-img rel">
+									<div class="hover-overlay">
+
+										<!-- Image -->
+										<img class="img-fluid" src="images/menu/burger-11.jpg" alt="menu-image" />	
+
+										<!-- Zoom Icon -->
+										<div class="menu-img-zoom ico-25">
+											<a href="images/menu/burger-11.jpg" class="image-link">
+												<span class="flaticon-zoom"></span>
+											</a>
+										</div> 
+
+									</div>
+								</div>
+
+								<!-- TEXT -->
+								<div class="menu-6-txt rel">
+
+									<!-- Rating -->	
+									<div class="item-rating">
+										<div class="stars-rating stars-lg">
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>		
+									</div>
+
+
+									<!-- Title -->
+									<h5 class="h5-sm">Las vegas</h5>
+
+									<!-- Description -->	
+									<p class="grey-color">Doble con cheddar, panceta, cebolla morada, salsa granero, baño de cheddar y panceta</p>
+
+								</div>
+
+							</div>
+						</div>	<!-- END MENU ITEM #1 -->
+
+
+						<!-- MENU ITEM #2 -->
+						<div class="col-sm-6 col-lg-3">
+							<div class="menu-6-item bg-white">
+
+								<!-- IMAGE -->
+								<div class="menu-6-img rel">
+									<div class="hover-overlay">
+
+										<!-- Image -->
+										<img class="img-fluid" src="images/menu/burger-12.jpg" alt="menu-image" />
+
+
+										<!-- Zoom Icon -->
+										<div class="menu-img-zoom ico-25">
+											<a href="images/menu/burger-12.jpg" class="image-link">
+												<span class="flaticon-zoom"></span>
+											</a>
+										</div> 
+
+									</div>
+								</div>
+
+								<!-- TEXT -->
+								<div class="menu-6-txt rel">
+
+									<!-- Rating -->	
+									<div class="item-rating">
+										<div class="stars-rating stars-lg">
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>		
+									</div>
+
+
+									<!-- Title -->
+									<h5 class="h5-sm">Springfield</h5>
+
+									<!-- Description -->	
+									<p class="grey-color">cheddar, panceta y huevo</p>
+
+
+								</div>
+
+							</div>
+						</div>	<!-- END MENU ITEM #2 -->
+
+
+					</div>	  <!-- End row -->	
+				</div>	   <!-- End container -->
+			</section>	<!-- END MENU-6 -->
+
+
+			
+			<section id="menu-6" class="wide-70 menu-section division">
+				<div class="container">
+
+
+					<!-- SECTION TITLE -->	
+					<div class="row">	
+						<div class="col-lg-10 offset-lg-1">
+							<div class="section-title mb-60 text-center">	
+
+								<!-- Title 	-->	
+								<h2 class="h2-xl red-color">Hot dog</h2>	
+
+								<!-- Text -->	
+								<p class="p-xl">Nuestros clientes recomiendan empezar probando...
+								</p>
+									
+							</div>	
+						</div>
+					</div>
+
+
+					<div class="row">
+
+
+						<!-- MENU ITEM #1 -->
+						<div class="col-sm-6 col-lg-3">
+							<div class="menu-6-item bg-white">
+
+								<!-- IMAGE -->
+								<div class="menu-6-img rel">
+									<div class="hover-overlay">
+
+										<!-- Image -->
+										<img class="img-fluid" src="images/menu/burger-11.jpg" alt="menu-image" />	
+
+										<!-- Zoom Icon -->
+										<div class="menu-img-zoom ico-25">
+											<a href="images/menu/burger-11.jpg" class="image-link">
+												<span class="flaticon-zoom"></span>
+											</a>
+										</div> 
+
+									</div>
+								</div>
+
+								<!-- TEXT -->
+								<div class="menu-6-txt rel">
+
+									<!-- Rating -->	
+									<div class="item-rating">
+										<div class="stars-rating stars-lg">
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>		
+									</div>
+
+
+									<!-- Title -->
+									<h5 class="h5-sm">Las vegas</h5>
+
+									<!-- Description -->	
+									<p class="grey-color">Doble con cheddar, panceta, cebolla morada, salsa granero, baño de cheddar y panceta</p>
+
+								</div>
+
+							</div>
+						</div>	<!-- END MENU ITEM #1 -->
+
+
+						<!-- MENU ITEM #2 -->
+						<div class="col-sm-6 col-lg-3">
+							<div class="menu-6-item bg-white">
+
+								<!-- IMAGE -->
+								<div class="menu-6-img rel">
+									<div class="hover-overlay">
+
+										<!-- Image -->
+										<img class="img-fluid" src="images/menu/burger-12.jpg" alt="menu-image" />
+
+
+										<!-- Zoom Icon -->
+										<div class="menu-img-zoom ico-25">
+											<a href="images/menu/burger-12.jpg" class="image-link">
+												<span class="flaticon-zoom"></span>
+											</a>
+										</div> 
+
+									</div>
+								</div>
+
+								<!-- TEXT -->
+								<div class="menu-6-txt rel">
+
+									<!-- Rating -->	
+									<div class="item-rating">
+										<div class="stars-rating stars-lg">
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>		
+									</div>
+
+
+									<!-- Title -->
+									<h5 class="h5-sm">Springfield</h5>
+
+									<!-- Description -->	
+									<p class="grey-color">cheddar, panceta y huevo</p>
+
+
+								</div>
+
+							</div>
+						</div>	<!-- END MENU ITEM #2 -->
+
+
+						<!-- MENU ITEM #3 -->
+						<div class="col-sm-6 col-lg-3">
+							<div class="menu-6-item bg-white">
+
+								<!-- IMAGE -->
+								<div class="menu-6-img rel">
+									<div class="hover-overlay">
+
+										<!-- Image -->
+										<img class="img-fluid" src="images/menu/burger-13.jpg" alt="menu-image" />
+	
+
+										<!-- Zoom Icon -->
+										<div class="menu-img-zoom ico-25">
+											<a href="images/menu/burger-13.jpg" class="image-link">
+												<span class="flaticon-zoom"></span>
+											</a>
+										</div> 
+
+									</div>
+								</div>
+
+								<!-- TEXT -->
+								<div class="menu-6-txt rel">
+
+									<!-- Rating -->	
+									<div class="item-rating">
+										<div class="stars-rating stars-lg">
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+											<i class="fas fa-star"></i>
+										</div>		
+									</div>
+
+
+									<!-- Title -->
+									<h5 class="h5-sm">Chicago</h5>
+
+									<!-- Description -->	
+									<p class="grey-color">con queso cheddar, panceta, cebolla caramelizada y barbacoa</p>
+
+
+								</div>
+
+							</div>
+						</div>	<!-- END MENU ITEM #3 -->
+
+
+
+
+					</div>	  <!-- End row -->	
+				</div>	   <!-- End container -->
+			</section>	<!-- END MENU-6 -->
+
 
 
 			<!-- DIVIDER-4
