--- a/index.html
+++ b/index.html
@@ -216,20 +216,14 @@
 
 								<!-- Title -->
 								<h2 id="3" class="h2-lg">Ubicación y horarios</h2>
-
+								<!-- Text -->
+								<p class="p-lg grey-color">Horarios: viernes, sábados, domingos y feriados de 11:30AM a 00AM
+								</p>
 								<div class="container">
 									<div class="estadoTienda" id="estadoTienda"></div>
 									<div class="contadorTienda" id="contadorTienda"></div>
-										<div class="row">
-											<div class="col-sm-6 col-lg-6">
-												
-											</div>
-											<div class="col-sm-6 col-lg-6">
-
-											</div>
-										</div>
-									</div>
-								<a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu" target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
+									<a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu" target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
+								</div>
 							</div>
 						</div>	<!-- END ABOUT TEXT -->
 
