--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 			<!-- ABOUT-ubicacion y horarios
 			============================================= -->
-			<section class="bg-fixed wide-100 about-section division">
+			<section id="3" class="bg-fixed wide-100 about-section division">
 				<div class="container">
 					<div class="row">
 
@@ -215,7 +215,7 @@
 							<div class=" text-center">
 
 								<!-- Title -->
-								<h2 id="3" class="h2-lg">Ubicación y horarios</h2>
+								<h2 class="h2-lg">Ubicación y horarios</h2>
 								<!-- Text -->
 								<p class="p-lg grey-color">Horarios: viernes, sábados, domingos y feriados de 11:30AM a 00AM
 								</p>
@@ -1100,6 +1100,7 @@
 						
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -1281,6 +1282,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -1456,6 +1458,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -1484,7 +1487,7 @@
 
 
 						<!-- MENU ITEM #1 -->
-						<div class="col-sm-6 col-lg-3">
+						<div class="col-sm-6 col-lg-6">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1521,7 +1524,7 @@
 
 
 						<!-- MENU ITEM #2 -->
-						<div class="col-sm-6 col-lg-3">
+						<div class="col-sm-6 col-lg-6">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1560,6 +1563,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -1587,7 +1591,7 @@
 
 
 						<!-- MENU ITEM #1 -->
-						<div class="col-sm-6 col-lg-3">
+						<div class="col-sm-6 col-lg-4">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1624,7 +1628,7 @@
 
 
 						<!-- MENU ITEM #2 -->
-						<div class="col-sm-6 col-lg-3">
+						<div class="col-sm-6 col-lg-4">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1663,7 +1667,7 @@
 
 
 						<!-- MENU ITEM #3 -->
-						<div class="col-sm-6 col-lg-3">
+						<div class="col-sm-6 col-lg-4">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1702,6 +1706,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -1884,6 +1889,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -2064,6 +2070,7 @@
 
 
 					</div>	  <!-- End row -->	
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
@@ -2236,6 +2243,7 @@
 						</div>	<!-- END MENU ITEM #4 -->
 
 					</div>
+					<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 				</div>	   <!-- End container -->
 			</section>	<!-- END MENU-6 -->
 
