--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-11.jpg" alt="menu-image" />	
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/las vegas.png" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-11.jpg" class="image-link">
+											<a href="./images/granero/comidas/las vegas.jpg" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -421,12 +421,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-12.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/springfield.png" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-12.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/springfield.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -471,12 +471,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-13.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/chicago.png" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-13.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/springfield.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -521,7 +521,7 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-14.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/springfield.png" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
@@ -954,11 +954,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-11.jpg" alt="menu-image" />	
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/los angeles.png" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-11.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/los angeles.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -991,12 +991,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-12.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/chicago.png" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-12.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/chicago.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1030,12 +1030,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-13.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/kansas.png" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-13.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/kansas.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1069,12 +1069,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid" src="images/menu/burger-14.jpg" alt="menu-image" />
+										<img class="img-fluid" src="./images/granero/comidas/hamburgesas/texas.png" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="images/menu/burger-14.jpg" class="image-link">
+											<a href="./images/granero/comidas/hamburgesas/texas.png" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1465,12 +1465,12 @@
 
 
 			
-			<section id="menu-6" class="wide-70 menu-section division">
-				<div class="container">
+			<section id="menu-6" class="wide-70 menu-section ">
+				<div class="container ">
 
 
 					<!-- SECTION TITLE -->	
-					<div class="row">	
+					<div class="row ">	
 						<div class="col-lg-10 offset-lg-1">
 							<div class="section-title mb-60 text-center">	
 
@@ -1485,9 +1485,12 @@
 
 					<div class="row">
 
+						<div class="col-lg-3">
+						</div>
+
 
 						<!-- MENU ITEM #1 -->
-						<div class="col-sm-6 col-lg-6">
+						<div class="col-sm-6 col-lg-3">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1524,7 +1527,7 @@
 
 
 						<!-- MENU ITEM #2 -->
-						<div class="col-sm-6 col-lg-6">
+						<div class="col-sm-6 col-lg-3">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1587,11 +1590,13 @@
 					</div>
 
 
-					<div class="row">
+					<div class="row centrado">
+
+						
 
 
 						<!-- MENU ITEM #1 -->
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-sm-6 col-lg-3">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1628,7 +1633,7 @@
 
 
 						<!-- MENU ITEM #2 -->
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-sm-6 col-lg-3">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
@@ -1667,7 +1672,7 @@
 
 
 						<!-- MENU ITEM #3 -->
-						<div class="col-sm-6 col-lg-4">
+						<div class="col-sm-6 col-lg-3">
 							<div class="menu-6-item bg-white">
 
 								<!-- IMAGE -->
