--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/las vegas.png" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/las vegas.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/las vegas.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/las vegas.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -421,12 +421,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/springfield.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/springfield.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/springfield.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/springfield.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -471,12 +471,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/chicago.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/chicago.webp" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/chicago.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/chicago.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -521,12 +521,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/seligman.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/seligman.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/seligman.jpg" class="image-link">
+											<a href="./images/granero/comidas/milanesas/seligman.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -571,12 +571,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/historica.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/historica.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/historica.jpg" class="image-link">
+											<a href="./images/granero/comidas/milanesas/historica.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -621,12 +621,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/carne.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/carne.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/phily/carne.jpg" class="image-link">
+											<a href="./images/granero/comidas/phily/carne.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -671,12 +671,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada caliente.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada caliente.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/picar/picada caliente.png" class="image-link">
+											<a href="./images/granero/comidas/picar/picada caliente.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -954,11 +954,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/los angeles.png" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/los angeles.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/los angeles.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/los angeles.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -991,12 +991,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/chicago.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/chicago.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/chicago.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/chicago.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1030,12 +1030,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/kansas.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/kansas.webp" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/kansas.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/kansas.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1069,12 +1069,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/texas.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hamburguesas/texas.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hamburguesas/texas.png" class="image-link">
+											<a href="./images/granero/comidas/hamburguesas/texas.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1136,11 +1136,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/seligman.jpg" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/seligman.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/seligman.jpg" class="image-link">
+											<a href="./images/granero/comidas/milanesas/seligman.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1173,12 +1173,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/misuri.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/misuri.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/misuri.png" class="image-link">
+											<a href="./images/granero/comidas/milanesas/misuri.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1212,12 +1212,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/kingman.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/kingman.webp" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/kingman.png" class="image-link">
+											<a href="./images/granero/comidas/milanesas/kingman.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1251,12 +1251,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/historica.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/milanesas/historica.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/milanesas/historica.jpg" class="image-link">
+											<a href="./images/granero/comidas/milanesas/historica.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1316,11 +1316,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/carne.jpg" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/carne.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/phily/carne.jpg" class="image-link">
+											<a href="./images/granero/comidas/phily/carne.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1353,12 +1353,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/pollo.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/pollo.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/phily/pollo.jpg" class="image-link">
+											<a href="./images/granero/comidas/phily/pollo.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1392,12 +1392,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/lomo simple.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/lomo simple.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/phily/lomo simple.jpg" class="image-link">
+											<a href="./images/granero/comidas/phily/lomo simple.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1427,12 +1427,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/lomito completo.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/phily/lomito completo.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/phily/lomito completo.jpg" class="image-link">
+											<a href="./images/granero/comidas/phily/lomito completo.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1498,11 +1498,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/ensaladas/cesar.jpg" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/ensaladas/cesar.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/ensaladas/cesar.jpg" class="image-link">
+											<a href="./images/granero/comidas/ensaladas/cesar.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1535,12 +1535,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/ensaladas/arizona.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/ensaladas/arizona.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/ensaladas/arizona.jpg" class="image-link">
+											<a href="./images/granero/comidas/ensaladas/arizona.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1604,11 +1604,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/criollo.jpg" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/criollo.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hot dog/criollo.jpg" class="image-link">
+											<a href="./images/granero/comidas/hot dog/criollo.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1641,12 +1641,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/chucrut.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/hot dog/chucrut.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/hot dog/chucrut.jpg" class="image-link">
+											<a href="./images/granero/comidas/hot dog/chucrut.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1747,11 +1747,11 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/chiken.jpg" alt="menu-image" />	
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/chiken.webp" alt="menu-image" />	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/picar/chiken.jpg" class="image-link">
+											<a href="./images/granero/comidas/picar/chiken.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1783,12 +1783,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada caliente.png" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada caliente.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/picar/picada caliente.png" class="image-link">
+											<a href="./images/granero/comidas/picar/picada caliente.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1822,12 +1822,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada tandilera.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/picada tandilera.webp" alt="menu-image" />
 	
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/picar/picada tandilera.jpg" class="image-link">
+											<a href="./images/granero/comidas/picar/picada tandilera.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
@@ -1863,12 +1863,12 @@
 									<div class="hover-overlay">
 
 										<!-- Image -->
-										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/rabas.jpg" alt="menu-image" />
+										<img class="img-fluid fotosComidas" src="./images/granero/comidas/picar/rabas.webp" alt="menu-image" />
 
 
 										<!-- Zoom Icon -->
 										<div class="menu-img-zoom ico-25">
-											<a href="./images/granero/comidas/picar/rabas.jpg" class="image-link">
+											<a href="./images/granero/comidas/picar/rabas.webp" class="image-link">
 												<span class="flaticon-zoom"></span>
 											</a>
 										</div> 
