--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="product-single.html" class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
+							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
 
 						</div>
 					</div> <!-- END HERO TEXT -->
@@ -982,11 +982,11 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="https://lh3.googleusercontent.com/pw/AIL4fc_b-DugxRBBlMwtBibSaTQLIOGoU5I0NMFxKE8aZL1-kM7dhRPWxOzXydbQIO2vjLhKTGdFrIYGryvUJ2FxK-orwxwJlVp-gmq7EpAqddLraERMfH5fji20zuuJcUWjHOuQo6svpZ8yg8Pr5e5gvs5TBgl1tdNSSYquQCHw7NZ5D94PMeTB2Q_RoynxN0YJxe5qRFsssxTc_bLbGaYwp4jKeqXEmyXe5yT8hYAqGP2onHns9HoNzvXVsrEFtm03HIcnB0mMqyap8X2qz2ZrNwptXVnxCokfK_NZVAvbXsFG2lL_sMxzWMpG_3a5ovynp2LmuUHx7i-GSHoqxvSL-S7ESKoqQaDDnC2143VuemAv_g1gb1ENi6z5yS9_4vAtV0s1k1mol9UFd051MDFhcnU0ZRGQXH2plksDS3p8ylLm9Kp9dItWcBOdpHf7pXaR6IDKWs5YxaxswlXo6XxMHl_MKxU9WEiGDib-raUy9U-128r8rwDZV9SrhEQ_RtbQDKbb5L8GGwuOG2Sz-jmEsO9ePeWMyMqveMHrKoYiXIvRg_XmFYl1e3BeW2Q6oC1Nn4yoIsdaJ1TpW-CIgQNP3MpRgfPiEQ_5uF01kG0dTCNz5I3usVNhxeQnZ8YUia3W0ZCRg86rkLaRAqpIGmHa71iXNNuXP84m_-CQxYPI-BexS8oh0dr3mPwpq-_jqjEIaU_vO_ls9sJ93H69RDePz69wt-c83dp-BcL7p2cFjHOkZfjS6MlxlYXgvJnDWgieJuoJqOFSqnme0vxSLfEQDQNjyZKEbLgeYhsLh5hQaK5al6TrIlc_6RkdmucDKYMGzsi52PwtKc61etYfoMtywSTH7ewxOTom58oQR3rxmuoEX961gRahBSFDruiX2BbmbYyCOfR4-ZO0sqzXbp0r1ymLb8qqz0bb3TTI40KqitXcKBBhwhNzBVXVaeU=w563-h643-s-no?authuser=0" alt="menu-image" />
+										src="./images/granero/comidas/hamburguesas/los angeles.webp" alt="menu-image" />
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
-										<a href="https://lh3.googleusercontent.com/pw/AIL4fc_b-DugxRBBlMwtBibSaTQLIOGoU5I0NMFxKE8aZL1-kM7dhRPWxOzXydbQIO2vjLhKTGdFrIYGryvUJ2FxK-orwxwJlVp-gmq7EpAqddLraERMfH5fji20zuuJcUWjHOuQo6svpZ8yg8Pr5e5gvs5TBgl1tdNSSYquQCHw7NZ5D94PMeTB2Q_RoynxN0YJxe5qRFsssxTc_bLbGaYwp4jKeqXEmyXe5yT8hYAqGP2onHns9HoNzvXVsrEFtm03HIcnB0mMqyap8X2qz2ZrNwptXVnxCokfK_NZVAvbXsFG2lL_sMxzWMpG_3a5ovynp2LmuUHx7i-GSHoqxvSL-S7ESKoqQaDDnC2143VuemAv_g1gb1ENi6z5yS9_4vAtV0s1k1mol9UFd051MDFhcnU0ZRGQXH2plksDS3p8ylLm9Kp9dItWcBOdpHf7pXaR6IDKWs5YxaxswlXo6XxMHl_MKxU9WEiGDib-raUy9U-128r8rwDZV9SrhEQ_RtbQDKbb5L8GGwuOG2Sz-jmEsO9ePeWMyMqveMHrKoYiXIvRg_XmFYl1e3BeW2Q6oC1Nn4yoIsdaJ1TpW-CIgQNP3MpRgfPiEQ_5uF01kG0dTCNz5I3usVNhxeQnZ8YUia3W0ZCRg86rkLaRAqpIGmHa71iXNNuXP84m_-CQxYPI-BexS8oh0dr3mPwpq-_jqjEIaU_vO_ls9sJ93H69RDePz69wt-c83dp-BcL7p2cFjHOkZfjS6MlxlYXgvJnDWgieJuoJqOFSqnme0vxSLfEQDQNjyZKEbLgeYhsLh5hQaK5al6TrIlc_6RkdmucDKYMGzsi52PwtKc61etYfoMtywSTH7ewxOTom58oQR3rxmuoEX961gRahBSFDruiX2BbmbYyCOfR4-ZO0sqzXbp0r1ymLb8qqz0bb3TTI40KqitXcKBBhwhNzBVXVaeU=w563-h643-s-no?authuser=0"
+										<a href="./images/granero/comidas/hamburguesas/los angeles.webp"
 											class="image-link" loading="lazy">
 											<span class="flaticon-zoom"></span>
 										</a>
@@ -1103,12 +1103,12 @@
 
 									<!-- Image -->
 									<img class="img-fluid fotosComidas" loading="lazy"
-										src="https://lh3.googleusercontent.com/pw/AIL4fc-wRiJX03Ggfy1bodVsIdHJcfbDMuDY7INPZQUFgwL5G2bneZ-zFdMTL_dIB4mdvXBYGc9M0oR04lMV_ha6InjpVB34eTMzhEoLHf9wmbVNBGUQtgY4Jais0NzqaI0yWYZhmCX09icstDTfj-RKKcYMhv7qPRbQmkJLI2nMVT7ZZBpEWDASFI7RgfWOwBXTUa4LsN6WSm7oBMiwJffJHvZGH_8JJgkz2lDpIDwIj2-cNrpBVntdkTY4YIXpcNXlMOB5qnjCK6DbLiAa19pdOxcR_d5cze8U2iUaH90t_kHho8XGaBVyTAHEtrAdorZjJkdGiIbQnogdWzvzNHS71NLM8Itmq9i4YhYwZRuiFay4ORJUjq6FAap0L48iF3zEwX7SqIWkCfrlM3ppuDacdsS5ytynlnJocswF_nZOAal3dgj6aZCcGa5lipSSSFGSeSjFNSI8R58_oVxxS92izvwuFf83QULPlQN517ghgCtpIb-G0XJKgSRe9GGYKf9INj-0Bo4wUegwFRsuuxxaEBv_MIVjl99RnNXzKtEkfpiYr1uRZpZZUk6MQi6pDv9ySojDZt5-NGBGZjUk3k8sxrjcbLFMjOxu3QVA3t8WradPxkb1TI2vUIzOJBiMRU_kPbcq5ofUxSlOSqj5w_ciKCQV0-0Cmf4Mkpd-93mAm8O37nOQd8reqMt9WalC3-Gt5aKAaeGt1Rp1OikXhrnY0AKSUYrbjd3-8HZ0sgi4Mvwvaiij40bgIFRYXOyFb_Kf-MxDGsnYXqap-WD3Yc61NE7RHmAto4Eg0PtHlVDzeM75qaREtLkXQBOopYQdbKImcQzXEfO_DxlIkgqA1N5DUt4qRsTYc70DCkS1NKAJyPMcKLWv2mg7cQ1Sk94I3NuMU3wZSvLcJ5cqgIq873Jo3WvjhjvN4WGNwAn_szB8CoSEDk3VpWxhZw_gCik=w563-h643-s-no?authuser=0" alt="menu-image" />
+										src="./images/granero/comidas/hamburguesas/texas.webp" alt="menu-image" />
 
 
 									<!-- Zoom Icon -->
 									<div class="menu-img-zoom ico-25">
-										<a href="https://lh3.googleusercontent.com/pw/AIL4fc-wRiJX03Ggfy1bodVsIdHJcfbDMuDY7INPZQUFgwL5G2bneZ-zFdMTL_dIB4mdvXBYGc9M0oR04lMV_ha6InjpVB34eTMzhEoLHf9wmbVNBGUQtgY4Jais0NzqaI0yWYZhmCX09icstDTfj-RKKcYMhv7qPRbQmkJLI2nMVT7ZZBpEWDASFI7RgfWOwBXTUa4LsN6WSm7oBMiwJffJHvZGH_8JJgkz2lDpIDwIj2-cNrpBVntdkTY4YIXpcNXlMOB5qnjCK6DbLiAa19pdOxcR_d5cze8U2iUaH90t_kHho8XGaBVyTAHEtrAdorZjJkdGiIbQnogdWzvzNHS71NLM8Itmq9i4YhYwZRuiFay4ORJUjq6FAap0L48iF3zEwX7SqIWkCfrlM3ppuDacdsS5ytynlnJocswF_nZOAal3dgj6aZCcGa5lipSSSFGSeSjFNSI8R58_oVxxS92izvwuFf83QULPlQN517ghgCtpIb-G0XJKgSRe9GGYKf9INj-0Bo4wUegwFRsuuxxaEBv_MIVjl99RnNXzKtEkfpiYr1uRZpZZUk6MQi6pDv9ySojDZt5-NGBGZjUk3k8sxrjcbLFMjOxu3QVA3t8WradPxkb1TI2vUIzOJBiMRU_kPbcq5ofUxSlOSqj5w_ciKCQV0-0Cmf4Mkpd-93mAm8O37nOQd8reqMt9WalC3-Gt5aKAaeGt1Rp1OikXhrnY0AKSUYrbjd3-8HZ0sgi4Mvwvaiij40bgIFRYXOyFb_Kf-MxDGsnYXqap-WD3Yc61NE7RHmAto4Eg0PtHlVDzeM75qaREtLkXQBOopYQdbKImcQzXEfO_DxlIkgqA1N5DUt4qRsTYc70DCkS1NKAJyPMcKLWv2mg7cQ1Sk94I3NuMU3wZSvLcJ5cqgIq873Jo3WvjhjvN4WGNwAn_szB8CoSEDk3VpWxhZw_gCik=w563-h643-s-no?authuser=0" class="image-link"
+										<a href="./images/granero/comidas/hamburguesas/texas.webp" class="image-link"
 											loading="lazy">
 											<span class="flaticon-zoom"></span>
 										</a>
@@ -1136,7 +1136,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank"class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -1326,7 +1326,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank"class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -1510,7 +1510,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank"class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -1622,7 +1622,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank"class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -1772,7 +1772,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank"class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -1965,7 +1965,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66"  target="_blank" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -2149,7 +2149,7 @@
 
 
 				</div> <!-- End row -->
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
@@ -2322,7 +2322,7 @@
 					</div> <!-- END MENU ITEM #4 -->
 
 				</div>
-				<a href="" class="btn btn-md btn-red tra-red-hover">Ver más</a>
+				<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">Ver más</a>
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
